@@ -11,7 +11,9 @@ import com.newrelic.jfr.Workarounds;
 import com.newrelic.telemetry.Attributes;
 import com.newrelic.telemetry.metrics.Gauge;
 import com.newrelic.telemetry.metrics.Metric;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import jdk.jfr.consumer.RecordedEvent;
 
 public class AllocationRequiringGCMapper implements EventToMetric {
@@ -19,11 +21,11 @@ public class AllocationRequiringGCMapper implements EventToMetric {
 
   @Override
   public List<? extends Metric> apply(RecordedEvent ev) {
-    var attr = new Attributes();
-    var timestamp = ev.getStartTime().toEpochMilli();
-    var threadName = Workarounds.getThreadName(ev);
+    Attributes attr = new Attributes();
+    long timestamp = ev.getStartTime().toEpochMilli();
+    Optional<String> threadName = Workarounds.getThreadName(ev);
     threadName.ifPresent(thread -> attr.put("thread.name", thread));
-    return List.of(
+    return Collections.singletonList(
         new Gauge("jfr.AllocationRequiringGC.allocationSize", ev.getLong("size"), timestamp, attr));
   }
 
